--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "dependencies": {
     "next": "10.0.2",
     "next-pwa": "^3.1.5",
+    "polished": "^4.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "styled-icons": "^10.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
