--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-avancado-boilerplate",
+  "name": "fortnite-explorer",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "next": "10.0.2",
     "next-pwa": "^3.1.5",
     "polished": "^4.0.5",
